--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "antd": "^5.10.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.18.0",
     "styled-components": "^6.1.0"
   },
   "lint-staged": {
