--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
     "antd": "^5.10.3",
+    "chart.js": "^4.4.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
