--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
     "styled-components": "^6.1.0"
