--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-markdown": "^9.0.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
+    "react-syntax-highlighter": "^15.5.0",
     "styled-components": "^6.1.0"
   },
   "lint-staged": {
@@ -31,6 +32,7 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.14",
     "@types/react-redux": "^7.1.28",
+    "@types/react-syntax-highlighter": "^15.5.9",
     "@types/styled-components": "^5.1.29",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
