--- a/package.json
+++ b/package.json
@@ -26,10 +26,8 @@
     "styled-components": "^6.1.0"
   },
   "lint-staged": {
-    "src/**/*.{ts,tsx, js, jsx}": [
-      "eslint --fix src",
-      "prettier --write \"src/**/*.{ts,tsx}\""
-    ]
+    "src/**/*.{ts,tsx}": ["prettier --write --list-different", "eslint --fix "]
+    
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
