--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "antd": "^5.10.3",
     "axios": "^1.6.0",
     "chart.js": "^4.4.0",
+    "dayjs": "^1.11.10",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
