--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "format": "prettier --write \"src/**/*.{ts,tsx}\""
   },
   "dependencies": {
+    "@ant-design/icons": "^5.2.6",
+    "@ant-design/plots": "^1.2.5",
     "@reduxjs/toolkit": "^1.9.7",
     "antd": "^5.10.3",
     "axios": "^1.6.0",
