--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "styled-components": "^6.1.0"
   },
   "lint-staged": {
-    "src/**/*.{ts,tsx}": ["prettier --write --list-different", "eslint --fix "]
+    "src/**/*.{ts,tsx}": ["prettier --write --list-different"]
     
   },
   "devDependencies": {
